WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225585
[macOS] ImageOverlayController should paint selection quads instead of bounding rects
https://bugs.webkit.org/show_bug.cgi?id=225585
Summary
[macOS] ImageOverlayController should paint selection quads instead of boundi...
Wenson Hsieh
Reported
2021-05-09 20:15:25 PDT
.
Attachments
For EWS
(41.80 KB, patch)
2021-05-09 21:54 PDT
,
Wenson Hsieh
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Fix CMake build
(42.38 KB, patch)
2021-05-09 21:57 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-05-09 20:15:44 PDT
<
rdar://problem/77725745
>
Wenson Hsieh
Comment 2
2021-05-09 21:54:00 PDT
Comment hidden (obsolete)
Created
attachment 428153
[details]
For EWS
Wenson Hsieh
Comment 3
2021-05-09 21:57:42 PDT
Created
attachment 428154
[details]
Fix CMake build
Wenson Hsieh
Comment 4
2021-05-10 11:00:05 PDT
Comment on
attachment 428154
[details]
Fix CMake build Thanks for the review!
EWS
Comment 5
2021-05-10 11:10:09 PDT
Committed
r277274
(
237541@main
): <
https://commits.webkit.org/237541@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 428154
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug